[package]
name = "dimwit"
description = "z-machine ZIL compiler"
version = "0.1.0"
authors = ["crawlingChaos"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/crawlingChaos/dimwit"
repository = "https://github.com/crawlingChaos/dimwit"
readme = "README.md"

[dependencies]
